# cmake-nested-solution

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
project1/: CMakeLists.txt
project2/: CMakeLists.txt
project3/: CMakeLists.txt
